# BlockKick

./: Cargo.toml  README.md  openapi.yaml  tags
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: component_diagram.txt  sequence_create_project.txt  sequence_mining.txt  sequence_vote.txt
src/: lib.rs  main.rs  validator.rs
src/api/: mod.rs  server.rs
src/api/handlers/: mining.rs  mod.rs  queries.rs  transactions.rs
src/consensus/: mod.rs  pow.rs
src/crypto/: hash.rs  keys.rs  mod.rs  signature.rs
src/mempool/: mempool.rs
src/state/: state.rs
src/storage/: blockchain.rs
src/types/: block.rs  transaction.rs
