[package]
name = "BlockKick"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sha2 = "0.10.9"
sha256 = "1.6.0"
tiny_http = "0.12"
url = "2.5.8"
